--- a/web/src/main/webapp/templates/AccessPointList.html
+++ b/web/src/main/webapp/templates/AccessPointList.html
@@ -35,9 +35,8 @@
 <thead>
 <tr>
     <th></th>
-    <th><a ng-click="paginator.setOrder('name')">Name<i ng-class="paginator | sortClass:'name'"></i></a></th>
+    <th><a ng-click="paginator.setOrder('name')">Name/MAC Address<i ng-class="paginator | sortClass:'name'"></i></a></th>
     <th><a ng-click="paginator.setOrder('model')">Model<i ng-class="paginator | sortClass:'model'"></i></a></th>
-    <th><a ng-click="paginator.setOrder('mac')">MAC Address<i ng-class="paginator | sortClass:'mac'"></i></a></th>
     <th><a ng-click="paginator.setOrder('orderableIp')">IP Address<i ng-class="paginator | sortClass:'orderableIp'"></i></a></th>
     <th>
         <div class="dropdown"><a href="#" role="button" data-toggle="dropdown" class="dropdown-toggle" ng-class="filter.state ? 'active' : null">Status<i class="icon-filter"></i></a>
@@ -57,45 +56,31 @@
             </ul>
         </div>
     </th>
-    <th>Actions</th>
+    <th><a ng-click="paginator.setOrder('actions')">Actions</a></th>
     <th><a ng-click="paginator.setOrder('uptime')">Uptime<i ng-class="paginator | sortClass:'uptime'"></i></a></th>
-    <th><a ng-click="paginator.setOrder('user_num_sta')"># of Connected Devices<i ng-class="paginator | sortClass:'user_num_sta'"></i></a></th>
-    <th><a ng-click="paginator.setOrder('tx_bytes')">Download<i ng-class="paginator | sortClass:'tx_bytes'"></i></a></th>
-    <th><a ng-click="paginator.setOrder('rx_bytes')">Upload<i ng-class="paginator | sortClass:'rx_bytes'"></i></a></th>
+    <th><a ng-click="paginator.setOrder('user_num_sta')">Devices<i ng-class="paginator | sortClass:'user_num_sta'"></i></a></th>
     <th><a ng-click="paginator.setOrder('cfgversion')">Version<i ng-class="paginator | sortClass:'cfgversion'"></i></a></th>
-    <th class="no-hover"></th>
+   <th></th>
 </tr>
 </thead>
 <tbody>
 <tr ng-repeat="accessPoint in accessPoints | filter: filter | storeItemCount: paginator.updateTotalItems | orderBy: paginator.orderBy | slice:(paginator.currentPage-1)*20:20">
     <td><a ng-click="forgetDevice(accessPoint.mac)" ng-show="accessPoint.adopted"><i class="icon-trash"></i></a></td>
-    <td>{{accessPoint.name}}</td>
-    <td>{{accessPoint.model}}</td>
     <td>
-        <a ng-show="accessPoint.state == 1" ng-href="#/device/{{accessPoint.id}}">{{accessPoint.mac}}</a>
-        <span ng-hide="accessPoint.adopted">{{accessPoint.mac}}</span>
+	<a ng-href="#/device/{{accessPoint.id}}">{{accessPoint.name || accessPoint.mac}}</a>
     </td>
+    <td>{{accessPoint.model}}</td>
     <td>{{accessPoint.ip}}</td>
     <td>{{accessPoint | deviceStatus}}</td>
     <td>
-        <ul role="menu" aria-labelledby="dropdownMenu" class="dropdown-menu pull-right">
-            <li ng-show="accessPoint.upgradable && accessPoint.state != 4"><a ng-click="upgradeDevice(accessPoint)">Update</li>
-            <li ng-show="accessPoint.state == 1"><a ng-href="#/device/{{accessPoint.id}}">Edit</a></li>
-            <li ng-show="accessPoint.state == 2"><a ng-click="adoptDevice(accessPoint)">Adopt</a></li>
-        </ul>
+	<a class="btn btn-primary" style="line-height:10px" ng-show="accessPoint.upgradable && accessPoint.state != 4" ng-click="upgradeDevice(accessPoint)">Update</a>
+        <a class="btn btn-primary" style="line-height:10px" ng-show="accessPoint.state == 1" ng-href="#/device/{{accessPoint.id}}">Details</a>
+        <a class="btn btn-primary" style="line-height:10px" ng-show="accessPoint.state == 2" ng-click="adoptDevice(accessPoint)">Adopt</a>
     </td>
     <td>{{accessPoint.uptime | uptime}}</td>
     <td>{{accessPoint.user_num_sta}}</td>
-    <td>{{accessPoint.tx_bytes | bytes}}</td>
-    <td>{{accessPoint.rx_bytes | bytes}}</td>
     <td>{{accessPoint.version || ''}}</td>
-        <div class="dropdown settings" ng-hide="accessPoint.state > 2"><a href="#" data-toggle="dropdown" class="dropdown-toggle icons"><i class="icon-cog"></i><i class="icon-caret-down"></i></a>
-            
-                
-                
-            </ul>
-        </div>
-    </td>
+    <td><a ng-click="redirect(accessPoint.id, 'activity')" ng-show="accessPoint.state == 1">Activity</a></td>
 </tr>
 
 </tbody>
