--- a/web/src/main/webapp/templates/SiteSettings.html
+++ b/web/src/main/webapp/templates/SiteSettings.html
@@ -62,12 +62,11 @@
                                                 <div ng-show="form.alert_email.$error.required" class="tip help">An email is required</div>
                                             </div>
                                         </div>
-                                        <div class="control-group">
-                                            <label for="address" class="control-label">Account Number</label>
-                                            <div class="controls">
+                                        <!-- <div class="control-group">
+                                            <label for="address" class="control-label">Account Number</label>                                            <div class="controls">
                                                 <input type="text" id="account" name="account" placeholder="Provide an account number..." ng-model="site.account">
                                             </div>
-                                        </div>
+                                        </div>-->
                                         <div class="control-group">
                                             <label for="address" class="control-label">Address</label>
                                             <div class="controls">
@@ -92,7 +91,20 @@
                                                 <input type="text" id="zip" name="zip" placeholder="Provide a zip..." ng-model="site.zip">
                                             </div>
                                         </div>
-                                    </div>
+					<h2 style="font-size: 20px">Access Point Username and Password</h2>
+					<div class="control-group">
+					   <label for="x_ssh_username" class="control-label">Username</label>
+					   <div class="controls">
+						<input type="text" disabled="disabled" id="x_ssh_username" name="x_ssh_username" ng-model="settingsMgmt.x_ssh_username">
+                                    	   </div>
+					</div>
+					<div class="control-group">
+                                           <label for="x_ssh_password" class="control-label">Password</label>
+                                           <div class="controls">
+                                                <input type="text" disabled="disabled" id="x_ssh_password" name="x_ssh_password" ng-model="settingsMgmt.x_ssh_password">
+                                           </div>
+                                        </div>
+					</div>
                                     
                                     <div class="field-section" ng-show="activeItem=='Guest'">
                                             <div class="control-group">
