Enable guest portal by default

--- a/web/src/main/webapp/templates/NewSite.html
+++ b/web/src/main/webapp/templates/NewSite.html
@@ -75,6 +75,6 @@
         </div>
     </div>
     <div class="update-controls" ng-show="isDirty()">
-        <button class="btn btn-primary" ng-click="update()">Create</button>
+        <button class="btn btn-primary" ng-click="create()">Create</button>
     </div>
 </div>
