Altered function called for site settings

--- a/web/src/main/webapp/templates/SiteSettings.html
+++ b/web/src/main/webapp/templates/SiteSettings.html
@@ -263,7 +263,7 @@
     </div>
 </div>
 <div class="update-controls" ng-show="isDirty()">
-    <button class="btn btn-primary" ng-disabled="form.$invalid" ng-click="activeItem=='Details' ? updateSite() : update()">Update</button>
+    <button class="btn btn-primary" ng-disabled="form.$invalid" ng-click="updateSite()">Update</button>
     <button class="btn btn-link clear-form" ng-click="reset()">Discard Changes</button>
 </div>
 </div>
