--- a/web/src/main/webapp/templates/Network.html
+++ b/web/src/main/webapp/templates/Network.html
@@ -18,13 +18,16 @@
 <div class="row-fluid">
     <div class="span12">
         <div class="content">
-            <div style="padding-bottom: 20px;">Changes to this page will cause each Access Point to provision. See status of Access Points on <a href="#/devices">here</a></div>
-            <div class="control-group">
+            <p>Changes to this page will cause each Access Point to provision. See status of Access Points on <a href="#/devices">here</a></p>
+	<div class="row-fluid">
+	    <div class="span3 control-group">
                 <div class="controls">
-                    <label class="checkbox" style="display: inline-block;"><input type="checkbox" ng-model="network.is_guest">Guest Network</label>
-                    <div ng-hide="!network.is_guest">Guest Settings for all networks are in <a href="#/settings">Location Settings</a></div>
-                </div>
+                    <label class="checkbox" style="display: inline-block; margin-left:20px"><input type="checkbox" ng-model="network.is_guest">Guest Network</label>
+		</div>
             </div>
+	    <div class="span3"></div>
+            <button ng-show="network.is_guest" style="margin-left:15px;" class="btn btn-primary" ng-click="redirect('guest')">Edit Location Guest Settings</button>
+	</div>
             <div class="container-fluid">
                 <div class="row-fluid" ng-show="activeItem == 'Configuration'">
                     <div class="span12">
@@ -38,23 +41,25 @@
                             form.wpaeapPass.$invalid ? 'error' : ''"><a ng-click="activeSubItem = 'Basic'">Basic</a></li>
                             <li ng-class="activeSubItem == 'Advanced' ? 'active' : form.vlan.$invalid ? 'error' : ''"><a ng-click="activeSubItem = 'Advanced'">Advanced</a></li>
                         </ul>
-                        <div ng-show="activeSubItem=='Basic'">
-                            <h3>Basic Settings</h3>
+                        <div ng-show="activeSubItem=='Basic'" style="margin-left: 0px;">
+                            <div ng-class="network.is_guest ? 'span6' : ''">
+			    <h3 style="margin-top: 0px;">Basic Settings</h3>
                             <p>Configure the settings for this network. Depending on the settings choosen, additional tabs/options will become available for further configuration.</p>
-                        </div>
+                            </div>
+                            <div ng-show="network.is_guest" class="span6" style="color:#aaa"> 
+			    <h3 style="margin-top: 0px;">Guest Settings</h3>
+                            <p>The guest settings for this and all guest networks. Change guest network settings <b><a ng-href="#/settings">here</a></b></p>
+                            </div>
+			</div>
                         <div ng-show="activeSubItem=='Advanced'">
                             <h3>Advanced Settings</h3>
                             <p>Configure the advanced settings for this network.</p>
                         </div>
-                        <div ng-show="activeSubItem=='Guest'">
-                            <h3>Guest Policies</h3>
-                            <p></p>
-                        </div>
-                        <div class="row-fluid"><div class="span8 offset2">
+                        <div class="row-fluid"><div class="span12">
                             <form name="form" class="form-horizontal" novalidate>
                                 <div class="field-section" ng-show="activeSubItem=='Basic'">
-                                    <div class="row">
-                                        <div class="span4">
+                                    <div class="row-fluid">
+                                        <div ng-class="network.is_guest ? 'span6' : 'span8 offset2'">
                                             <div class="control-group" ng-class="form.name.$invalid ? 'error' : ''">
                                                 <label for="name" class="control-label">
                                                     Network name (SSID)<i class="icon-asterisk required"></i>
@@ -162,8 +167,8 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="span4">
-                                            <div class="field-section" ng-show="network.is_guest">
+                                        <div class="span6">
+                                            <div class="field-section" style="color:#aaa" ng-show="network.is_guest">
                                                 <div class="control-group">
                                                     <div class="control-label">
                                                         Authentication
@@ -188,7 +193,6 @@
                                                     <div class="control-label">IP Address:</div>
                                                     <div class="controls">
                                                         <input type="text" id="customIp" name="customIp" disabled ng-model="guestSettings.custom_ip" ng-required="guestSettings.auth == 'custom'" valid-ip/>
-                                                        <i ng-hide="form.customIp.$invalid" class="icon-ok-sign active"></i>
                                                         <div ng-show="form.customIp.$invalid" class="tip help">Please provide an IP Address</div>
                                                     </div>
                                                 </div>
@@ -210,7 +214,6 @@
                                                     <div class="controls">
                                                         <input type="{{ showPassword ? 'text' : 'password' }}" disabled id="guestPassword" name="guestPassword" ng-model="guestSettings.x_password" ng-required="settings.auth == 'password'"/>
                                                         <label class="checkbox" style="display: inline-block;"><input type="checkbox" ng-model="showPassword">Show Password</label>
-                                                        <i ng-hide="form.guestPassword.$invalid" class="icon-ok-sign active"></i>
                                                         <div ng-show="form.guestPassword.$invalid" class="tip help">Please provide a password</div>
                                                     </div>
                                                 </div>
@@ -225,7 +228,6 @@
                                                             <option value="5760">4 days</option>
                                                             <option value="10080">7 days</option>
                                                         </select>
-                                                        <i ng-hide="form.expire.$error.required" class="icon-ok-sign active"></i>
                                                         <div ng-show="form.expire.$error.required" class="tip help">Please select an expiration period</div>
                                                     </div>
                                                 </div>
@@ -244,7 +246,6 @@
                                                     <div class="control-label">Promotional URL</div>
                                                     <div class="controls">
                                                         <input type="text" id="promoUrl" name="promoUrl" disabled ng-model="guestSettings.redirect_url" ng-required="guestSettings.redirect_enabled"/>
-                                                        <i ng-hide="form.promoUrl.$invalid" class="icon-ok-sign active"></i>
                                                         <div ng-show="form.promoUrl.$invalid" class="tip help">Please provide a url</div>
                                                     </div>
                                                 </div>
@@ -252,8 +253,9 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="field-section" ng-show="activeSubItem=='Advanced'">
-                                    <div class="control-group">
+                                <div class="field-section" class="offset2" ng-show="activeSubItem=='Advanced'">
+                                    <div class="span8 offset2">
+				    <div class="control-group">
                                         <label for="name" class="control-label">VLAN</label>
                                         <div class="controls">
                                             <input type="checkbox" id="vlanEnabled" name="vlanEnabled" ng-model="network.vlan_enabled" ng-value="true"/>
@@ -295,6 +297,7 @@
                                             </label>
                                         </div>
                                     </div>
+					</div>
                                 </div>
                             </form>
                         </div></div>
