--- a/web/src/main/webapp/templates/SiteSettings.html
+++ b/web/src/main/webapp/templates/SiteSettings.html
@@ -188,7 +188,7 @@
                                         <div class="controls">
                                             <input type="text" id="promoUrl" name="promoUrl" ng-model="settings.redirect_url" ng-required="settings.redirect_enabled"/>
                                             <i ng-hide="form.promoUrl.$invalid" class="icon-ok-sign active"></i>
-                                            <div ng-show="form.promoUrl.$invalid" class="tip help">Please provide a url</div>
+                                            <div ng-show="form.promoUrl.$invalid" class="tip help">Please provide a urli including 'http://'</div>
                                         </div>
                                     </div>
                                 </div>
